syntax = "proto2";

package ccloudpubapi_v1;

import "ccloudpubapi_v1/Retrieve.proto";
import "compubapi_v1/Metadata.proto";

option java_package = "com.yoti.ccloudpubapi_v1";
option java_outer_classname = "InsertProto";

// InsertRequest inserts a data record into the content
// cloud. It can later be retrieved using the tags.
message InsertRequest {
    // RequesterPubKey is the public key used to encrypt the data.
    optional bytes requester_pub_key = 1;

    // DataGroup denotes the category of data being looked at.
    optional string data_group = 2;

    // EncryptedContent is the actual data stored.
    optional bytes encrypted_content = 3;

    // EncryptionKeyId is the identifier for the encryption key used to encrypt
    // EncryptedContent.
    optional bytes encryption_key_id = 4;

    // Tags is a list of tags referencing this Record
    repeated Tag tags = 5;

    // CloudId is a unique identifier for the cloud associated
    // with a yoti account.
    optional bytes cloud_id = 6;

    // DeviceMetadata (manufacture name, OS version, etc)
    optional compubapi_v1.Metadata device_metadata = 1600;

    // Feature activation flags (Flag1 | Flag2 | etc)
    // Enum flags are defined here: core-api/feature_flags.txt
    optional fixed64 feature_flags = 1601;

    // CorrelationId is generated by the client and used to correlate the
    // asynchronous response messages triggered by this request.
    optional string correlation_id = 1602;
}

// InsertResponse is returned is the call to the insert endpoint
// is successfull.
message InsertResponse {
    // RecordId is the unique id which identifies a record in content cloud.
    optional bytes record_id = 1;
}

